# Shufflr

./: .env  .env.local  .gitignore  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
flutter_shufflr/: README.md  pubspec.yaml
flutter_shufflr/lib/: main.dart
src/: App.tsx  styles.css  tauri-shim.d.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src/components/: FileActionsToolbar.tsx  FileTable.tsx  Header.tsx  RenamingPanel.tsx  icons.tsx
src/components/modals/: ExtractApplyOptionsModal.tsx  FileOperationModal.tsx  HelpModal.tsx  ImportOptionsModal.tsx  MultiReplaceModal.tsx  SearchAndCollectModal.tsx  UnfoundItemsModal.tsx
src/services/: fileUtils.ts  geminiService.ts  useRenameHistory.ts
