[package]
name = "shufflr"
version = "1.0.0"
edition = "2021"
description = "Shufflr desktop app"

[dependencies]
tauri = { version = "1.6", features = [
    "fs-all",
    "dialog-all",
    "path-all",
    "shell-open",
    "window-all"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "1.6", features = [] }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
